<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/MeTimeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/reviews"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/BackBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SalonNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/raleway_bold"
        android:text="The Gallery Salon"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MeTimeSign" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ReviewTextTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:hint="\n"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SalonNameTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ReviewTextET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="170dp"
            android:fontFamily="@font/raleway_semibold"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:padding="12dp"
            android:scrollbars="vertical"
            android:maxLines="10"
            android:overScrollMode="always"
            android:textColorHint="@color/gray3"
            android:hint="@string/type_your_review_here" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/RateLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ReviewTextTL">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="13dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/Star1Btn"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/star_outlined" />

        <ImageView
            android:id="@+id/Star2Btn"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/star_outlined" />

        <ImageView
            android:id="@+id/Star3Btn"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/star_outlined" />

        <ImageView
            android:id="@+id/Star4Btn"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/star_outlined" />

        <ImageView
            android:id="@+id/Star5Btn"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/star_outlined" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/anonymousCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:fontFamily="@font/raleway_medium"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:text="@string/send_as_anonymous"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RateLL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SubmitBtn"
        android:layout_width="271dp"
        android:layout_height="61dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/raleway_bold"
        android:paddingTop="0dp"
        android:text="@string/submit"
        android:textColor="#3E3E3E"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/CancelBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:strokeColor="@color/gray4"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/CancelBtn"
        android:layout_width="271dp"
        android:layout_height="61dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/raleway_bold"
        android:paddingTop="0dp"
        android:text="@string/cancel"
        android:textColor="#3E3E3E"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>