<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">
    <TextView
        android:id="@+id/MeTimeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metime"
        android:textSize="19sp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/state"
        android:layout_width="110dp"
        android:layout_height="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MeTimeSign"
        android:src="@drawable/state_1"
        android:layout_marginTop="52dp"/>

    <TextView
        android:id="@+id/chooseService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/state"
        android:text="@string/please_choose_a_service"
        android:textSize="24sp"
        android:fontFamily="@font/raleway_semibold"
        android:layout_marginTop="48dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:itemCount="4"
        app:spanCount="2"
        tools:listitem="@layout/item_service_category"
        android:layout_marginTop="67dp"
        android:id="@+id/ServicesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseService"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SkipBtn"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginRight="15dp"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/primary"
        android:text="@string/skip"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>