<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/MeTimeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/reviews"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/BackBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ReviewsSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/customer_reviews_for"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MeTimeSign" />

    <TextView
        android:id="@+id/SalonNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="The Gallery Salon"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ReviewsSign" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ReviewsRV"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginTop="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SalonNameTV"
        tools:listitem="@layout/item_review" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/WriteReviewBtn"
        android:layout_width="271dp"
        android:layout_height="61dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/raleway_bold"
        android:paddingTop="0dp"
        android:text="@string/write_a_review"
        android:textColor="#3E3E3E"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:strokeColor="@color/gray4"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>