<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="315dp"
    android:layout_height="311dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/WarningIcon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/warning_x"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/WarningSign"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/are_you_sure_you_want_to_cancel_this_appointment"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WarningIcon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/WarningSign">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/NoBtn"
                android:layout_width="125dp"
                android:layout_height="54dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/no"
                android:textColor="@color/warning"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/CancelBtn"
                android:layout_width="125dp"
                android:layout_height="54dp"
                android:backgroundTint="@color/warning"
                android:fontFamily="@font/raleway_bold"
                android:paddingTop="3dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
