<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">
    <TextView
        android:id="@+id/MeTimeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metime"
        android:textSize="19sp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/BackBtn"
        />

    <ImageView
        android:id="@+id/state"
        android:layout_width="110dp"
        android:layout_height="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MeTimeSign"
        android:src="@drawable/state_3"
        android:layout_marginTop="52dp"/>

    <TextView
        android:id="@+id/chooseService"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/state"
        android:text="@string/choose_a_professional_see_the_slots_available"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="@font/raleway_semibold"
        android:layout_marginTop="39dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_professional"
        tools:itemCount="3"
        android:layout_marginTop="39dp"
        android:id="@+id/ServicesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseService"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SkipBtn"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginRight="15dp"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/primary"
        android:text="@string/i_don_t_have_a_preference"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>