<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">
    <TextView
        android:id="@+id/MeTimeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metime"
        android:textSize="19sp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/LogInSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin_code"
        android:fontFamily="@font/raleway_bold"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MeTimeSign"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="75dp"/>


    <LinearLayout
        android:layout_marginTop="44dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/LogInSign">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginRight="25dp"
            android:id="@+id/_1btnLT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:hint="\n"
            app:layout_constraintTop_toBottomOf="@id/FullNameSign"
            app:boxStrokeColor="@color/primary"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:textAlignment="center"
                android:maxLength="1"
                android:id="@+id/_1btnET"
                android:fontFamily="@font/raleway_semibold"
                android:layout_width="67dp"
                android:layout_height="74dp"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/grayHint" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginRight="25dp"
            android:id="@+id/_2btnLT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:hint="\n"
            app:layout_constraintTop_toBottomOf="@id/FullNameSign"
            app:boxStrokeColor="@color/primary"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:textAlignment="center"
                android:maxLength="1"
                android:id="@+id/_2btnET"
                android:fontFamily="@font/raleway_semibold"
                android:layout_width="67dp"
                android:layout_height="74dp"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/grayHint" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginRight="25dp"
            android:id="@+id/_3btnLT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:hint="\n"
            app:layout_constraintTop_toBottomOf="@id/FullNameSign"
            app:boxStrokeColor="@color/primary"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:textAlignment="center"
                android:maxLength="1"
                android:id="@+id/_3btnET"
                android:fontFamily="@font/raleway_semibold"
                android:layout_width="67dp"
                android:layout_height="74dp"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/grayHint" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_4btnLT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:hint="\n"
            app:layout_constraintTop_toBottomOf="@id/FullNameSign"
            app:boxStrokeColor="@color/primary"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:textAlignment="center"
                android:maxLength="1"
                android:id="@+id/_4btnET"
                android:fontFamily="@font/raleway_semibold"
                android:layout_width="67dp"
                android:layout_height="74dp"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/grayHint" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/sendCodeAgainTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pin_code"
        android:textColor="@color/gray2"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/LogoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/gray2"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_semibold"
        app:layout_constraintStart_toEndOf="@id/sendCodeAgainTV"
        app:layout_constraintBottom_toBottomOf="@id/sendCodeAgainTV"/>



</androidx.constraintlayout.widget.ConstraintLayout>